--- a/src/containers/App/App.scss
+++ b/src/containers/App/App.scss
@@ -13,3 +13,16 @@ html,
   background-color: #E0E5EC;
   overflow: hidden;
 }
+
+.App {
+  display: flex;
+  flex-direction: column;
+}
+
+.App-ColorDisp {
+  height: 50%;
+  width: 100%;
+  display: flex;
+  flex-direction: row; 
+  justify-content: space-around;
+}
