--- a/src/containers/App/App.scss
+++ b/src/containers/App/App.scss
@@ -20,9 +20,10 @@ html,
 }
 
 .App-ColorDisp {
-  height: 50%;
+  height: 55%;
   width: 100%;
   display: flex;
   flex-direction: row; 
   justify-content: space-around;
+  align-items: center;
 }
