--- a/src/containers/ColorForm/ColorForm.scss
+++ b/src/containers/ColorForm/ColorForm.scss
@@ -1,6 +1,42 @@
 .colorForm {
-    height: 50%;
+    height: 45%;
     width: 100%;
     display: flex;
     flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+
+    h1 {
+        height: 20%;
+        width: 100%;
+        text-align: center;
+        font-size: 1.8rem;
+        color: #a3b1c699;
+        margin-top: 3%;
+    }
+
+    input {
+        width: 40%;
+        height: 30%;
+        background: transparent;
+        font-size: 1.2em;
+        text-align: center;
+        color: #a3b1c699;
+        border: none;
+        border-bottom: 2px solid #a3b1c699;
+    }
+
+    button {
+        width: 40%;
+        height: 20%;
+        background-color: #E0E5EC;
+        color: #a3b1c699;
+        font-weight: bold;
+        font-size: 1.8rem;
+        border-bottom-right-radius: 5% 35%;
+        border-top-right-radius: 5% 35%;
+        border-bottom-left-radius: 5% 35%;
+        border-top-left-radius: 5% 35%;
+        box-shadow: 9px 9px 16px rgba(163, 177, 198, 0.6), -9px -9px 16px  rgba(255,255,255, 0.5);
+    }
 }
