--- a/src/components/ColorBox/ColorBox.scss
+++ b/src/components/ColorBox/ColorBox.scss
@@ -13,4 +13,13 @@
     height: 90%;
     width: 90%;
     border-radius: 10%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: #a3b1c699;
+
+    h3 {
+        font-size: 1.8rem;
+    }
 }
